rename Orange alarm circle to circle3, rewire, and inherit background from the timer

--- a/timer/Base.lproj/Main.storyboard
+++ b/timer/Base.lproj/Main.storyboard
@@ -279,10 +279,9 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.52156862749999999" green="0.27450980390000002" blue="0.61960784310000006" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </view>
-                                    <view alpha="0.0" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XGc-7g-934">
-                                        <rect key="frame" x="163" y="164" width="10" height="10"/>
+                                    <view alpha="0.0" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bNN-Hr-4we">
+                                        <rect key="frame" x="162" y="164" width="10" height="10"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.52156862749999999" green="0.27450980390000002" blue="0.61960784310000006" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </view>
                                     <view alpha="0.0" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RZq-6g-oTs">
                                         <rect key="frame" x="163" y="164" width="10" height="10"/>
@@ -316,8 +315,8 @@
                         <viewLayoutGuide key="safeArea" id="jPt-aT-zXD"/>
                     </view>
                     <connections>
+                        <outlet property="animatedCircle3" destination="bNN-Hr-4we" id="XeB-oS-PaW"/>
                         <outlet property="animatedCircle4" destination="RZq-6g-oTs" id="RyA-U1-XGi"/>
-                        <outlet property="animatedOrangeCircle" destination="XGc-7g-934" id="RYC-rZ-kZy"/>
                         <outlet property="animatedPinkCircle" destination="IZG-pO-c13" id="ZaD-E6-8zj"/>
                         <outlet property="animatedPurpleCircle" destination="8kd-bh-pX4" id="ZW0-cQ-OJZ"/>
                         <outlet property="circleProgressBar" destination="fnP-Mq-3Hj" id="d7E-kR-iNs"/>
