rename purple alarm circle to circle1, rewire, inherit background color from the timer

--- a/timer/Base.lproj/Main.storyboard
+++ b/timer/Base.lproj/Main.storyboard
@@ -269,10 +269,9 @@
                                     <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fnP-Mq-3Hj" customClass="CircleProgressBar">
                                         <color key="backgroundColor" red="0.96440672869999999" green="0.95326268670000003" blue="0.93726104499999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </view>
-                                    <view alpha="0.0" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8kd-bh-pX4">
-                                        <rect key="frame" x="163" y="164" width="10" height="10"/>
+                                    <view alpha="0.0" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aCO-2T-1rh">
+                                        <rect key="frame" x="162" y="164" width="10" height="10"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.52156862749999999" green="0.27450980390000002" blue="0.61960784310000006" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </view>
                                     <view alpha="0.0" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AaA-UN-QlY">
                                         <rect key="frame" x="163" y="164" width="10" height="10"/>
@@ -314,10 +313,10 @@
                         <viewLayoutGuide key="safeArea" id="jPt-aT-zXD"/>
                     </view>
                     <connections>
+                        <outlet property="animatedCircle1" destination="aCO-2T-1rh" id="Aue-aG-pg7"/>
                         <outlet property="animatedCircle2" destination="AaA-UN-QlY" id="wZa-of-2d4"/>
                         <outlet property="animatedCircle3" destination="bNN-Hr-4we" id="XeB-oS-PaW"/>
                         <outlet property="animatedCircle4" destination="RZq-6g-oTs" id="RyA-U1-XGi"/>
-                        <outlet property="animatedPurpleCircle" destination="8kd-bh-pX4" id="ZW0-cQ-OJZ"/>
                         <outlet property="circleProgressBar" destination="fnP-Mq-3Hj" id="d7E-kR-iNs"/>
                         <outlet property="circleSuperView" destination="glE-VI-K0j" id="vE6-M1-ivw"/>
                         <outlet property="heightConstraint" destination="o5Y-87-muG" id="wRY-ah-GfO"/>
