--- a/Source/Base.lproj/Main.storyboard
+++ b/Source/Base.lproj/Main.storyboard
@@ -40,6 +40,11 @@
                                 <state key="normal" title="2">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer2mins" id="aND-uO-GDB"/>
                                 </connections>
@@ -53,6 +58,11 @@
                                 <state key="normal" title="3">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="17.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer3mins" id="IAa-yz-284"/>
                                 </connections>
@@ -66,6 +76,11 @@
                                 <state key="normal" title="4">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="19"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer4mins" id="r0t-Yd-IXd"/>
                                 </connections>
@@ -79,6 +94,11 @@
                                 <state key="normal" title="5">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="20.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer5mins" id="KUT-OZ-PpD"/>
                                 </connections>
@@ -92,6 +112,11 @@
                                 <state key="normal" title="6">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="22"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer6mins" id="EmL-yE-vk9"/>
                                 </connections>
@@ -105,6 +130,11 @@
                                 <state key="normal" title="7">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="23"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer7mins" id="SAD-N9-Cw1"/>
                                 </connections>
@@ -118,6 +148,11 @@
                                 <state key="normal" title="8">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="24.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer8mins" id="tEe-Bf-e9i"/>
                                 </connections>
@@ -131,6 +166,11 @@
                                 <state key="normal" title="9">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="26"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer9mins" id="Plh-Dg-KTS"/>
                                 </connections>
@@ -144,6 +184,11 @@
                                 <state key="normal" title="10">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="27.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer10mins" id="70M-d2-4DA"/>
                                 </connections>
@@ -235,19 +280,6 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <connections>
-                        <outlet property="button10" destination="rFL-hJ-8sj" id="r3i-3L-Gwg"/>
-                        <outlet property="button2" destination="2V0-CL-9aC" id="CNc-DA-j9f"/>
-                        <outlet property="button3" destination="4y4-5I-7Y2" id="V9f-2h-2Zf"/>
-                        <outlet property="button4" destination="j64-E2-Vtv" id="CaX-Xl-Tym"/>
-                        <outlet property="button5" destination="vUg-1U-bgU" id="eyR-T7-Dp3"/>
-                        <outlet property="button6" destination="mrT-Gi-Mfq" id="IaX-O3-Sxs"/>
-                        <outlet property="button7" destination="Nzh-6z-9A3" id="jyX-IY-ZlH"/>
-                        <outlet property="button8" destination="mt6-TK-79q" id="WF0-79-hkV"/>
-                        <outlet property="button9" destination="NWf-Uk-B25" id="ArR-Tf-2Y8"/>
-                        <outlet property="onebutton" destination="u9Q-M6-e0G" id="nbt-cK-YNh"/>
-                        <outlet property="superView" destination="8bC-Xf-vdC" id="7mz-wY-V9j"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
